Add admin queue request editing
